# node-forge-render-server

./: .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  COMMIT_HISTORY.md  Cargo.toml  HANDOFF_PASS_DEBUG_PERF.md  README.md  SPLIT_COMMITS_README.md  build.rs  ideal-project-architecture.md
3rd/rust-wgpu-fiber/: Cargo.toml
assets/: node-forge-example.1.json  node-scheme.json
docs/: 03-mesh-gradient-canvas-design-session-plan.md  20-debug-window-refactor.md  21-debug-window-refactor-implementation-plan.md  dsl-to-rust-wgpu-fiber-implementation.md  dsl-ws-render-server-plan.md  egui-textedit-double-click-lag-handoff.md  geometry-coordination-resolver-refactor.md  pass-debug-shortwire-mode-plan.md  renderer-refactoring-architecture.md  renderer-refactoring-implementation-guide.md  renderpass-msaa-sample-count-adaptation.md  rust-wgpu-fiber-improvement-notes.md  testing-animation-values.md  testing-wgsl-generation.md  todo.md
docs/from-others/: dsl-update-server.md  render-server-dsl-parsing.md  rust-wgpu-fiber-change-log.md  rust-wgpu-fiber.md
docs/plans/: shortwire-reference-diff-plan.md
skills/: implement-new-node.md
src/: android_reference.rs  app.rs  asset_store.rs  color.rs  command.rs  debug_artifacts.rs  dsl.rs  graph.rs  lib.rs  main.rs  nforge.rs  perf_log.rs  profile.rs  protocol.rs  renderer.rs  schema.rs  stream.rs  ts_runtime.rs  vm.rs  ws.rs
src/animation/: mod.rs  runloop.rs  session.rs  task.rs  timeline.rs  value_pool.rs
src/app/: canvas_controller.rs  display_metrics.rs  input_scope.rs  interaction_report.rs  layout_math.rs  matrix_render.rs  mod.rs  scene_runtime.rs  texture_bridge.rs  types.rs  window_mode.rs
src/renderer/: README.md  camera.rs  glsl_snippet.rs  graph_uniforms.rs  legacy.rs  mod.rs  pass_debug.rs  scene_prep.rs  shader_space.rs  types.rs  utils.rs  validation.rs  wgsl.rs  wgsl_bloom.rs  wgsl_gradient_blur.rs
src/shaders/: bytecode_vm.wgsl  fixed_ubo_rect.wgsl  simple_rect.wgsl
src/state_machine/: easing.rs  mod.rs  motion.rs  mutation.rs  mutation_function.rs  runtime.rs  timeline.rs  trace.rs  types.rs  validation.rs
src/ui/: animation_manager.rs  button.rs  clipping_map.rs  color_popover.rs  debug_sidebar.rs  design_tokens.rs  diff_renderer.rs  file_tree_widget.rs  hdr_clamp.rs  histogram.rs  mod.rs  parade.rs  pass_debug_window.rs  qualifier_map.rs  resource_tree.rs  state_machine_panel.rs  timeline_panel.rs  typography.rs  vectorscope.rs  viewport_indicators.rs  wgsl_highlight.rs
src/ws/: asset_transfer.rs  debug_artifacts.rs  dispatch.rs  hub.rs  mod.rs  scene_delta.rs  shader_templates.rs
tests/: animation_values.rs  camera_mat4_schema.rs  downsample_output_target_dedup.rs  event_processing_race.proptest-regressions  event_processing_race.rs  file_render_target.rs  hdr_headless_export.rs  headless_dsl_json_blur_blend_blur.rs  headless_dsl_json_calculated_window_size.rs  headless_dsl_json_chained_blur_pass.rs  headless_dsl_json_gaussian_blur.rs  headless_dsl_json_glass_foreground_math_node.rs  headless_dsl_json_glass_foreground_sdf.rs  headless_dsl_json_pass_texture_alpha.rs  instanced_math_closure.rs  list_msaa_8x_formats.rs  pass_blend_defaults.rs  pass_capture.rs  processing_chain_camera_policy.rs  render_cases.rs  renderpass_msaa.rs  scene_delta.rs  shader_material_schema.rs  state_machine.rs  wgsl_generation.rs
tests/calculated-window-size/: calculated-window-size.json
tests/chained-blur-pass/: chained-blur-pass.json
tools/: check-commit-lines.sh  package-lock.json  package.json  ws-send-scene.js
(+854 files in other folders)
