[package]
name = "node-forge-render-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rust-wgpu-fiber = {version = "*", path = "./3rd/rust-wgpu-fiber"}
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
tungstenite = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
# Used for WGSL validation at runtime and in tests
naga = { version = "0.20", features = ["wgsl-in", "glsl-in", "wgsl-out"] }

deno_core = { version = "0.380.0", features = ["include_icu_data"] }
arboard = "3"
bytemuck = { version = "1", features = ["derive"] }
rfd = "0.15"
gltf = "1"
tobj = "4"

[patch.crates-io]
egui-wgpu = { path = "3rd/egui-wgpu" }

[dev-dependencies]
