[package]
name = "node-forge-render-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rust-wgpu-fiber = {version = "*", path = "../rust-wgpu-fiber"}
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"
tungstenite = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "exr"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
# Used for WGSL validation at runtime and in tests
naga = { version = "0.20", features = ["wgsl-in", "glsl-in", "wgsl-out"] }

notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
deno_core = { version = "0.380.0", features = ["include_icu_data"] }
arboard = "3"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1"
half = "2"
rayon = "1"
rfd = "0.15"
gltf = { version = "1", features = ["extras"] }
tobj = "4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
metal = "0.32"

[patch.crates-io]
egui-wgpu = { path = "3rd/egui-wgpu" }

[dev-dependencies]
proptest = "1"
