[package]
name = "node-forge-render-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rust-wgpu-fiber = {version = "*", path = "../rust-wgpu-fiber"}
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
crossbeam-channel = "0.5"
tungstenite = "0.21"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "exr"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
# Used for WGSL validation at runtime and in tests
naga = { version = "0.20", features = ["wgsl-in", "glsl-in", "wgsl-out"] }
ahash = "0.8"
similar = "2"

notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
deno_core = { version = "0.380.0", features = ["include_icu_data"] }
arboard = "3"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1"
half = "2"
rfd = "0.15"
gltf = { version = "1", features = ["extras"] }
tobj = "4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
metal = "0.32"

[patch.crates-io]
eframe = { path = "3rd/eframe" }
egui-wgpu = { path = "3rd/egui-wgpu" }
block = { path = "3rd/block" }

[dev-dependencies]
proptest = "1"
# Structural headless validation fallback for CI hosts without a native GPU.
# The noop backend never replaces pixel comparison when a real adapter exists.
wgpu = { version = "29.0.3", default-features = false, features = ["noop"] }
